Fixed small deserialization bug